[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"

scrypto_avltree = { path = ".." }

[dev-dependencies]
# radix-transaction-scenarios = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
radix-transactions = "1.2.0"
radix-engine = "1.2.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0" }
# scrypto_testenv = { path = "../../scrypto-testenv" }

[profile.dev]
opt-level = 'z'        # Optimize for size.
lto = false            # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace
